--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
+    <meta http-equiv="cache-control" content="no-cache" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/logo.c5206d99.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/logo.d5c735e3.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ayos Development</title>
-    <script type="module" crossorigin src="/assets/index.fd61fb3f.js"></script>
-    <link rel="stylesheet" href="/assets/index.3dd79a12.css">
+    <script type="module" crossorigin src="/assets/index.67fbb866.js"></script>
+    <link rel="stylesheet" href="/assets/index.c547f2bd.css">
   </head>
 
   <body>
