--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta http-equiv="cache-control" content="no-cache" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/logo.d5c735e3.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ayos Development</title>
-    <script type="module" crossorigin src="/assets/index.67fbb866.js"></script>
-    <link rel="stylesheet" href="/assets/index.c547f2bd.css">
+    <script type="module" crossorigin src="/assets/index.c88997fd.js"></script>
+    <link rel="stylesheet" href="/assets/index.1685a0fb.css">
   </head>
 
   <body>
